--- a/flask_recommender/brewery_recommender/templates/about.html
+++ b/flask_recommender/brewery_recommender/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>About Page</h1>
-    <a target=”_blank” href=”https://www.google.com/search?q=Google+tutorial+create+link”>Google tutorial create link</a>
+    <h1>Model Overview</h1>
+
 {% endblock content %}
