finished my home-page

--- a/flask_recommender/brewery_recommender/templates/about.html
+++ b/flask_recommender/brewery_recommender/templates/about.html
@@ -1,5 +1,5 @@
 {% extends "layout.html" %}
 {% block content %}
-    <h1>Model Overview</h1>
-
+    <h1>Project Details</h1>
+    <p>This is where some technical details about my project will go...blah blah blah technical stuff.
 {% endblock content %}
