--- a/flask_recommender/brewery_recommender/templates/recommendations.html
+++ b/flask_recommender/brewery_recommender/templates/recommendations.html
@@ -8,8 +8,8 @@
     {% for brewery, beers in recommendations.items() %}
         <div class="media-body">
             <p>
-                <h3> <a method="POST" href="{{ url_for('testing', brewery=brewery) }}">{{ brewery }}<a></h3>
-                <h5>Make sure you try these beers while you are there!</h5>
+                <h3> <a method="POST" target="_blank" href="{{ url_for('testing', brewery=brewery) }}">{{ brewery }}<a></h3>
+                <h5>Keep your eyes out for these beers specifically!</h5>
                 <ul>
                 {% for beer in beers %}
                     <li>{{ beer }}</li>
